# Logistic-ERP-System

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  REQ.md  ROUTES_DOC.md  docker-compose.prod.yml  docker-compose.yml  fix_document_order_ids.sql  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  dependency-review.yml
config/: settings.py
docs/: DEVELOPER_GUIDE.md
frontend/: SIDEBAR_LAYOUT_CHANGES.md  jest.config.js  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/: AuthInitializer.tsx  CurrencyDisplay.tsx  DateDisplay.tsx  DurationDisplay.tsx  LogoutButton.tsx  ProtectedRoute.tsx
frontend/src/contexts/: TenantSettingsContext.tsx
frontend/src/data/: mockData.ts
frontend/src/hooks/: useAnalytics.ts  useBranches.ts  useNotificationStream.ts  useUserEmails.ts
frontend/src/lib/: api.ts  companyApi.ts  roles.ts
frontend/src/services/: analytics.ts  config.ts
frontend/src/store/: index.ts  provider.tsx
frontend/src/test/: user-management-e2e.test.js
frontend/src/types/: common.ts  index.ts  tenant.ts
frontend/src/utils/: apiProxy.ts  currency.ts  timezone.ts  toast.ts
k8s/configmaps/: common-config.yaml
k8s/namespaces/: logistics-erp.yaml
k8s/secrets/: secrets-template.yaml
monitor/: setup-grafana-logs.md
monitoring/: alertmanager.yml  alerts.yml  docker-logging.yml  log-collector.py  prometheus.yml
monitoring/filebeat/: filebeat.yml
monitoring/grafana/dashboards/: log-dashboard.json
scripts/: add-finance-permissions.sql  add-normal-priority-to-tms.sql  create-analytics-indexes.sql  create-analytics-views.sql  debug_order_status.sql  enable-company-rls.sql  fix-duplicate-emails.sql  init-auth-schema.sql  init-company-schema.sql  init-finance-schema.sql  init-notification-schema.sql  init-orders-schema.sql  init-postgres-databases.sh  init-tms-schema.sql  migrate-db-permissions.sql  refresh-analytics-views.sh  seed-company-data.sql  setup-dev.bat  setup-dev.sh
scripts/migrations/: 001_add_tms_status_to_orders.sql  002_add_item_status_to_tms.sql  002_add_item_status_tracking.sql  002_add_tms_columns_to_trip_orders.sql  003_add_item_status_to_orders.sql  003_add_old_values_to_audit_logs.sql  004_add_trip_item_assignments.sql  004_fix_order_status_trigger.sql  005_fix_trigger_for_partial_quantities.sql  015_add_audit_permissions.sql  016_add_pause_status_to_trips.sql  016_fix_tenant_unique_constraints.sql  017_add_customer_multiple_business_types.sql  017_add_trips_pause_resume_permissions.sql  018_add_marketing_person_fields.sql  018_add_new_values_to_audit_logs.sql  024_add_company_feature_columns.sql  025_add_audit_logs_action_timestamp.sql  025_add_permissions_to_role_15.sql  026_add_due_days_to_orders.sql  026_add_remaining_audit_logs_columns.sql  add_audit_logs_table.sql  add_created_by_role_to_orders.sql  add_marketing_person_customer_assignment.sql  add_roles_BM.sql
services/analytics/: Dockerfile  README.md  pyproject.toml
services/analytics/src/: config.py  database.py  main.py
services/analytics/src/api/: __init__.py
services/analytics/src/api/endpoints/: __init__.py  dashboard.py  drivers.py  orders.py  trips.py  trucks.py
services/analytics/src/models/: __init__.py  schemas.py
services/auth/: Dockerfile  IMPLEMENTATION_SUMMARY.md  pyproject.toml  requirements.txt  setup.py
services/auth/migrations/: 001_initial_schema.sql  002_default_permissions.sql  003_default_admin.sql  README.md  run_migrations.py
services/auth/src/: __init__.py  auth.py  config.py  config_local.py  database.py  (+3 more)
services/company/: API_DOCUMENTATION_FOR_FRONTEND.md  DATABASE_FIXES.md  Dockerfile  FK_CONSTRAINT_FIXES.md  README.md  migrations.py  pyproject.toml  run_migration.py  test_endpoints.py  test_models.py
services/driver/: Dockerfile  pyproject.toml
services/driver/src/: __init__.py  __main__.py  config.py  http_client.py  main.py  schemas.py
services/driver/src/api/endpoints/: driver.py  tenant_cleanup.py
services/driver/src/middleware/: __init__.py  auth.py
services/driver/src/security/: __init__.py  auth.py  dependencies.py  exceptions.py
services/driver/src/services/: audit_client.py  driver_service.py  permission_service.py
services/finance/: Dockerfile  pyproject.toml
services/finance/src/: __init__.py  config.py  database.py  main.py  security.py
services/finance/src/api/endpoints/: __init__.py  approvals.py  orders.py  reports.py  tenant_cleanup.py
services/finance/src/middleware/: __init__.py  audit.py  auth.py  rate_limit.py  security.py  tenant.py
services/finance/src/models/: __init__.py  approval.py
services/finance/src/schemas/: __init__.py  approval.py
services/finance/src/services/: __init__.py  permission_service.py
services/notification/: Dockerfile  pyproject.toml
services/notification/src/: config.py  database.py  main.py  security.py
services/notification/src/api/endpoints/: health.py  notifications.py  preferences.py  sse.py
services/notification/src/models/: __init__.py
services/notification/src/schemas/: notification.py
services/notification/src/services/: kafka_consumer.py  notification_service.py  recipient_resolver.py  scheduler.py  sse_manager.py  template_renderer.py
services/orders/: Dockerfile  README.md  pyproject.toml
services/tms/: Dockerfile  pyproject.toml
services/tms/src/: __init__.py  config.py  database.py  main.py  schemas.py
services/tms/src/api/endpoints/: driver.py  orders.py  permissions.py  resources.py  tenant_cleanup.py  trips.py
services/tms/src/middleware/: __init__.py  audit.py  auth.py  rate_limit.py  security.py  tenant.py
services/tms/src/security/: __init__.py  auth.py  dependencies.py  exceptions.py
services/tms/src/services/: __init__.py  audit_client.py  company_client.py  kafka_producer.py  orders_service_client.py  permission_service.py  trip_service.py
shared/: exceptions.py  logging.py  metrics.py  simple_metrics.py  tracing.py
shared/monitoring/: __init__.py  metrics.py
(+450 files in other folders)
